<resources>
    <string name="app_name">D3K Official App</string>
    <string name="password">Hasło</string>
    <string name="remember_me">Zapamiętaj mnie?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Rejestracja</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="logged_in_successfully">Zalogowano pomyślnie!</string>
    <string name="logout">Wyloguj się</string>
    <string name="email">Adres e-mail</string>
    <string name="register">Zarejestruj się</string>
    <string name="already_have_an_account_login">Masz już konto? Zaloguj się!</string>
    <string name="no_connection">Brak połączenia z internetem.</string>
    <string name="try_again">Spróbuj ponownie</string>
    <string name="wifi_settings">Ustawienia Wi-Fi</string>
    <string name="change_language">Zmień język</string>
    <string name="select_language">Wybierz język</string>
    <string name="polish">Polski</string>
    <string name="english">English</string>
    <string name="german">Deutsch</string>
    <string name="spanish">Español</string>
    <string name="password_repeat">Powtórz hasło</string>
    <string name="password_change">Zmiana hasła</string>
    <string name="password_reset_code">Kod resetowania hasła</string>
    <string name="new_password">Nowe hasło</string>
    <string name="reset_password">Zresetuj hasło</string>
    <string name="go_to_login">Przejdź do logowania</string>
    <string name="placeholder">placeholder</string>
    <string name="password_change_info">Oto twój kod zmiany hasła! Zapisz go w bezpiecznym miejscu.</string>
    <string name="connect">Połącz</string>
    <string name="disconnect">Rozłącz</string>
    <string name="receive_data">Odbierz dane</string>
    <string name="send_wifi">Wyślij WiFi</string>
    <string name="sync_time">Synchronizacja czasu</string>
    <string name="band_info">Informacje o urządzeniu</string>
    <string name="reset_code_header">Oto twój kod resetu hasła</string>
    <string name="reset_code_message">Twój kod resetu został wygenerowany.</string>
    <string name="enter_your_data">Wprowadź swoje dane</string>
    <string name="confirm_data">Potwierdź dane</string>
    <string name="gender_placeholder">Płeć</string>
    <string name="age_placeholder">Wiek</string>
    <string name="weight_placeholder">Waga</string>
    <string name="height_placeholder">Wzrost</string>
    <string name="bottom_nav_home">STRONA GŁÓWNA</string>
    <string name="bottom_nav_band">OPASKA</string>
    <string name="bottom_nav_profile">PROFIL</string>
    <string name="bottom_nav_settings">USTAWIENIA</string>
    <string name="send_data">Wyślij dane na serwer</string>
    <string name="wifi_data_header">Wysyłanie danych WiFi</string>
    <string name="wifi_password">Hasło WiFi</string>
    <string name="wifi_send">Wyślij</string>
    <string name="alert_cancel">Anuluj</string>
    <string name="edit_your_data">Edytuj swoje dane</string>
    <string name="reset_password_button">Reset</string>
    <string name="repeat_password_hint">Powtórz nowe hasło</string>
    <string name="new_password_hint">Nowe hasło</string>
    <string name="reset_code_hint">Kod zmiany hasła</string>
    <string name="reset_password_header">Zmień hasło</string>
    <string name="change_theme_header">Zmiana motywu</string>
    <string name="sea_breeze_theme">Morska bryza</string>
    <string name="post_modern_theme">Miami Vice</string>
    <string name="app_version">wersja: 1.0</string>
    <string name="app_creators">Twórcy:\nMarcel Radtke\nBartosz Rakowski</string>
    <string name="contact_us">Skontaktuj się z nami</string>
    <string name="contact_description">W razie doświadczenia jakichkolwiek problemów czy błędów związanych z działaniem naszej aplikacji, skontaktuj się z nami za pomocą maila (kliknij na adres poniżej)</string>
    <string name="bmi_status_underweight">Niedowaga</string>
    <string name="bmi_status_normal">Normalna waga</string>
    <string name="bmi_status_overweight">Nadwaga</string>
    <string name="bmi_status_obesity">Otyłość</string>
    <string name="activity_walking">Spacer</string>
    <string name="activity_jogging">Jogging</string>
    <string name="activity_running">Bieg</string>
    <string name="activity_sprint">Sprint</string>
    <string name="activity_hiking">Piesza wycieczka</string>
    <string name="activity_tennis">Tenis</string>
    <string name="activity_football">Piłka nożna</string>
    <string name="activity_basketball">Koszykówka</string>
    <string name="activity_volleyball">Siatkówka</string>
    <string name="activity_light_exertion">Lekki wysiłek</string>
    <string name="activity_moderate_exertion">Średni wysiłek</string>
    <string name="activity_intense_exertion">Intensywny wysiłek</string>
    <string name="workout_type_format">Workout Type: %s</string>
    <string name="duration_format">Duration: %d sec</string>
    <string name="distance_format">Distance: %.2f km</string>
    <string name="calories_format">Calories: %.2f kcal</string>
    <string name="date_format">Date: %s</string>
    <string name="select_activity">Wybierz aktywność</string>
    <string name="connected">POŁĄCZONA</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="bmi_calculator">Kalkulator\nBMI</string>
    <string name="weight_kg">Waga (kg)</string>
    <string name="height_cm">Wzrost (cm)</string>
    <string name="age">Wiek</string>
    <string name="calculate">OBLICZ</string>
    <string name="weight">Waga</string>
    <string name="height">Wzrost</string>
    <string name="calories_ncalculator">Kalkulator\nkalorii</string>
    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>
    <string name="activity_level">Poziom aktywności</string>
    <string name="change_your_nprofile_picture">Zmień zdjęcie\nprofilu</string>
    <string name="upload_new_picture">Wgraj nowe zdjęcie</string>
    <string name="update_your_health_data">Zaktualizuj swoje dane</string>
    <string name="speed_graph">Graf prędkości</string>
    <string name="welcome_testuser">"Witaj, "</string>
    <string name="my_trainings">Moje treningi</string>
    <string name="forum">Forum</string>
    <string name="badges">Odznaki</string>
    <string name="bmi_amp_kcal_calculator">Kalkulator BMI i kalorii</string>
    <string name="enter_username">Nazwa użytkownika</string>
    <string name="enter_password">Hasło</string>
    <string name="confirm_password">Powtórz hasło</string>
    <string name="register_bold">ZAREJESTRUJ SIĘ</string>
    <string name="change_user_data">Zmień dane zdrowotne</string>
    <string name="change_profile_picture">Zmień zdjęcie profilowe</string>
    <string name="change_password">Zmień hasło</string>
    <string name="change_theme">Zmień motyw</string>
    <string name="app_information">Informacje o aplikacji</string>
    <string name="heartrate_graph">Graf tętna</string>
    <string name="time">Czas:</string>
    <string name="calories">Kalorie:</string>
    <string name="distance">Dystans:</string>
    <string name="avg_steps">Śr. kroki:</string>
    <string name="avg_bpm">Śr. tętno:</string>
    <string name="previous">Poprzednia\nstrona</string>
    <string name="next">Następna\nstrona</string>
    <string name="poziom_baterii">Poziom baterii:</string>
    <string name="wersja_firmware_1_0_2">Wersja firmware:</string>
    <string name="liczba_plik_w_do_przes_ania">Liczba plików do przesłania:</string>
    <string name="close">Zamknij</string>
    <string name="your_bmi_is">Twoje BMI wynosi:</string>
    <string name="your_calorie_nincome_is">Twoje zapotrzebowanie\nkaloryczne wynosi:</string>
    <string name="wprowad_ssid">Wprowadź SSID</string>
    <string name="wprowad_has_o_wifi">Wprowadź hasło WiFi</string>
    <string name="wybierz_typ_treningu">Wybierz typ treningu</string>
    <string name="activity_v_low">Bardzo niska (0–1 treningów tygodniowo)</string>
    <string name="activity_low">Niska (2–3 treningi tygodniowo)</string>
    <string name="activity_medium">Średnia (4–5 treningów tygodniowo)</string>
    <string name="activity_high">Wysoka (6–7 treningów tygodniowo)</string>
    <string name="activity_v_high">Bardzo wysoka (8+ treningów tygodniowo)</string>
    <string name="trainings">Treningi</string>
</resources>