<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/tvChooseLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textSize="20sp"
        android:layout_marginBottom="24dp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageButton
                android:id="@+id/btnPolish"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_flag_poland"
                android:contentDescription="@string/polish"
                android:background="?android:selectableItemBackground"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polish"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageButton
                android:id="@+id/btnEnglish"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_flag_uk"
                android:contentDescription="@string/english"
                android:background="?android:selectableItemBackground"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageButton
                android:id="@+id/btnGerman"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_flag_germany"
                android:contentDescription="@string/german"
                android:background="?android:selectableItemBackground"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/german"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageButton
                android:id="@+id/btnSpanish"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_flag_spain"
                android:contentDescription="@string/spanish"
                android:background="?android:selectableItemBackground"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spanish"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
